--- a/docroot/modules/custom/towerhealth_rating_migration/config/install/migrate_plus.migration_group.towerhealth.yml
+++ b/docroot/modules/custom/towerhealth_rating_migration/config/install/migrate_plus.migration_group.towerhealth.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   enforced:
     module:
-      - towerhealth_migration # for uninstall
+      - towerhealth_rating_migration # for uninstall
 id: towerhealth
 label: Tower Health
 description: 'Tower Health imports'
