--- a/config/sites/default/migrate_plus.migration.towerhealth_ratings.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_ratings.yml
@@ -1,4 +1,4 @@
-uuid: d8043ce2-3576-456e-8ec2-38f6b0c65f3f
+uuid: d5b2fdd3-f888-410b-a6d8-a3ab8cb4d43b
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - towerhealth_rating_migration
 _core:
-  default_config_hash: LQeYBQFFFHmnYYXOjn8qvWMS44m3ME6PM7ETlirQb7c
+  default_config_hash: eBESe1Yq9OJ39UmNjOYq_9beLOdyUp383GjdZNF72ik
 id: towerhealth_ratings
 class: null
 field_plugin_method: null
@@ -16,68 +16,15 @@ migration_tags:
 migration_group: towerhealth
 label: 'Physician Ratings'
 source:
-  plugin: url
-  data_fetcher_plugin: file
-  data_parser_plugin: json
-  urls:
-    - modules/custom/towerhealth_migration/data/comments.json
-  item_selector: data/entities
-  track_changes: true
-  fields:
-    -
-      name: display_name
-      label: 'Display Name'
-      selector: name
-    -
-      name: npi_id
-      label: 'NPI ID'
-      selector: id
-    -
-      name: totalRatingCount
-      label: 'Rating Count'
-      selector: totalRatingCount
-    -
-      name: totalCommentCount
-      label: 'Comment Count'
-      selector: totalCommentCount
-    -
-      name: overallRating
-      label: 'Overall Rating'
-      selector: overallRating/value
-    -
-      name: comments
-      label: Comments
-      selector: comments
-  ids:
-    npi_id:
-      type: integer
+  plugin: provider_rating
+  key: default
 process:
-  _npi_id:
-    plugin: get
-    source: npi_id
-  pseudo_rating_comments_paragraph:
-    -
-      plugin: sub_process
-      source: comments
-      process:
-        comment:
-          plugin: migration_lookup
-          migration: towerhealth_ratings_comments
-          source: id
-          no_stub: true
-    -
-      plugin: towerhealth_rating_comments
-  field_rating_comments_ref:
-    plugin: sub_process
-    source: '@pseudo_rating_comments_paragraph'
-    process:
-      target_id: '0'
-      target_revision_id: '1'
+  field_profile_npi: field_profile_npi
   nid:
     -
       plugin: towerhealth_lookup_node
       lookup_field: field_profile_npi
-      source: '@_npi_id'
+      source: field_profile_npi
     -
       plugin: skip_on_empty
       method: row
@@ -103,6 +50,9 @@ process:
       index:
         - 0
         - value
+  field_rating_comments_ref:
+    plugin: towerhealth_rating_comments
+    source: comments
   field_rating_count: totalRatingCount
   field_rating_comment_count: totalCommentCount
   field_rating_overall: overallRating
@@ -110,5 +60,6 @@ process:
     plugin: default_value
     default_value: profile
 destination:
-  plugin: 'entity:node'
+  plugin: node_paragraphs
+  lookup_field: field_profile_npi
 migration_dependencies: {  }
