update facet label and value pair in field settings

--- a/config/sites/default/facets.facet.provider_type.yml
+++ b/config/sites/default/facets.facet.provider_type.yml
@@ -52,6 +52,18 @@ processor_configs:
       sort: 40
     settings:
       sort: ASC
+  exclude_specified_items:
+    processor_id: exclude_specified_items
+    weights:
+      build: 50
+    settings:
+      exclude: 'independent, contracted'
+      regex: false
+  list_item:
+    processor_id: list_item
+    weights:
+      build: 5
+    settings: {  }
   url_processor_handler:
     processor_id: url_processor_handler
     weights:
