install enable facet custom label module and update facet labels

--- a/config/sites/default/facets.facet.provider_type.yml
+++ b/config/sites/default/facets.facet.provider_type.yml
@@ -59,6 +59,12 @@ processor_configs:
     settings:
       exclude: 'independent, contracted'
       regex: false
+  facets_custom_label:
+    processor_id: facets_custom_label
+    weights:
+      build: 50
+    settings:
+      replacement_values: "r|tower_health_employed| Physicians Only\r\nr|app_employed|Advanced Practitioners Only"
   list_item:
     processor_id: list_item
     weights:
