--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "drupal/devel": "^2.1",
         "drupal/emulsify": "^3.1",
         "drupal/facets": "^1.4",
+        "drupal/facets_custom_label": "^1.0",
         "drupal/field_group": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/migrate_devel": "^1.2@beta",
