--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -24,6 +24,7 @@ module:
   editor: 0
   entity_reference_revisions: 0
   facets: 0
+  facets_custom_label: 0
   field: 0
   field_group: 0
   field_ui: 0
