--- a/config/sites/default/facets.facet.insurance_groups.yml
+++ b/config/sites/default/facets.facet.insurance_groups.yml
@@ -8,12 +8,12 @@ dependencies:
   module:
     - search_api
 id: insurance_groups
-name: 'Insurance accepted » Taxonomy term » Name » String'
+name: 'Insurance accepted » Taxonomy term » Insurance company » String'
 url_alias: insurance_groups
 weight: 0
 min_count: 1
 show_only_one_result: false
-field_identifier: provider_insurance_groups_string
+field_identifier: provider_insurance_company_string
 facet_source_id: 'search_api:views_page__find_a_provider__find_doctor'
 widget:
   type: dropdown
@@ -21,7 +21,7 @@ widget:
     show_numbers: false
     default_option_label: Choose
 query_operator: or
-use_hierarchy: false
+use_hierarchy: true
 expand_hierarchy: false
 enable_parent_when_child_gets_disabled: true
 hard_limit: 0
