Cleanup migration and add drush command.

--- a/docroot/modules/custom/towerhealth_rating_migration/config/install/migrate_plus.migration.towerhealth_ratings.yml
+++ b/docroot/modules/custom/towerhealth_rating_migration/config/install/migrate_plus.migration.towerhealth_ratings.yml
@@ -56,11 +56,11 @@ process:
     plugin: towerhealth_rating_comments
     source: comments
 
-  field_rating_count: totalRatingCount
+  field_rating_count: total_rating_count
 
-  field_rating_comment_count: totalCommentCount
+  field_rating_comment_count: total_comment_count
 
-  field_rating_overall: overallRating
+  field_rating_overall: overall_rating
 
   type:
     plugin: default_value
