--- a/config/sites/default/migrate_plus.migration.towerhealth_ratings.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_ratings.yml
@@ -53,9 +53,9 @@ process:
   field_rating_comments_ref:
     plugin: towerhealth_rating_comments
     source: comments
-  field_rating_count: totalRatingCount
-  field_rating_comment_count: totalCommentCount
-  field_rating_overall: overallRating
+  field_rating_count: total_rating_count
+  field_rating_comment_count: total_comment_count
+  field_rating_overall: overall_rating
   type:
     plugin: default_value
     default_value: profile
