--- a/config/sites/default/search_api.index.towerhealth.yml
+++ b/config/sites/default/search_api.index.towerhealth.yml
@@ -10,9 +10,9 @@ dependencies:
     - field.storage.node.field_profile_gender
     - field.storage.node.field_insurance_ref
     - field.storage.taxonomy_term.field_insurance_company
-    - field.storage.node.field_location_ref
-    - field.storage.node.field_location_type
     - field.storage.node.field_profile_languages
+    - field.storage.node.field_location_type
+    - field.storage.node.field_location_ref
     - field.storage.node.field_profile_type
     - search_api.server.local_development
     - core.entity_view_mode.node.search_index
@@ -116,6 +116,14 @@ field_settings:
       module:
         - taxonomy
         - taxonomy
+  provider_insurance_ref:
+    label: 'Insurance accepted'
+    datasource_id: 'entity:node'
+    property_path: field_insurance_ref
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_insurance_ref
   provider_location_title_string:
     label: 'Location » Content » Title'
     datasource_id: 'entity:node'
@@ -274,6 +282,11 @@ processor_settings:
   add_url: {  }
   aggregated_field: {  }
   entity_status: {  }
+  hierarchy:
+    fields:
+      provider_insurance_ref: taxonomy_term-field_related_conditions_ref
+    weights:
+      preprocess_index: -45
   ignorecase:
     all_fields: true
     fields:
@@ -285,6 +298,7 @@ processor_settings:
       - profile_gender_string
       - provider_insurance_company_string
       - provider_insurance_groups_string
+      - provider_insurance_ref
       - provider_location_title_string
       - provider_location_type_string
       - provider_profile_languages_string
