--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,9 @@
         "drupal/emulsify": "^3.1",
         "drupal/facets": "^1.4",
         "drupal/field_group": "^3",
+        "drupal/geocoder": "^2.3",
+        "drupal/geofield": "^1.6",
+        "drupal/geolocation": "^3.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/migrate_devel": "^1.2@beta",
         "drupal/migrate_plus": "^4.2",
@@ -58,6 +61,7 @@
         "drupal/rabbit_hole": "^1.0@beta",
         "drupal/readonly_field_widget": "^1.3",
         "drupal/redirect": "^1.4",
+        "drupal/search_api_location": "^1.0",
         "drupal/search_api_solr": "^1.1",
         "drupal/token": "^1.5",
         "drupal/workbench": "^1.1",
