--- a/config/sites/default/field.storage.node.field_location_hours.yml
+++ b/config/sites/default/field.storage.node.field_location_hours.yml
@@ -10,12 +10,12 @@ field_name: field_location_hours
 entity_type: node
 type: office_hours
 settings:
-  cardinality_per_day: '2'
+  cardinality_per_day: 2
   time_format: g
   element_type: office_hours_datetime
-  increment: '15'
-  comment: 1
-  valhrs: 1
+  increment: 15
+  comment: true
+  valhrs: true
   limit_start: ''
   limit_end: ''
 module: office_hours
