--- a/config/sites/default/core.entity_form_display.node.page.default.yml
+++ b/config/sites/default/core.entity_form_display.node.page.default.yml
@@ -3,9 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.page.field_media
+    - field.field.node.page.field_text
     - node.type.page
   module:
+    - media_library
     - path
+    - text
 _core:
   default_config_hash: sb0qCkzU_8mNq29NehYAU8jCBXWPLeX0UN8sYFVGVcw
 id: node.page.default
@@ -19,6 +23,21 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_media:
+    type: media_library_widget
+    weight: 121
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
+    region: content
+  field_text:
+    weight: 122
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   moderation_state:
     type: moderation_state_default
     weight: 100
