--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -22,6 +22,10 @@ module:
   default_content: 0
   dynamic_page_cache: 0
   editor: 0
+  embed: 0
+  entity_browser: 0
+  entity_browser_entity_form: 0
+  entity_embed: 0
   entity_reference_revisions: 0
   facets: 0
   field: 0
@@ -40,6 +44,8 @@ module:
   inline_entity_form: 0
   link: 0
   media: 0
+  media_entity_browser: 0
+  media_entity_browser_media_library: 0
   media_library: 0
   menu_ui: 0
   metatag: 0
