--- a/config/sites/default/embed.button.media_entity_embed.yml
+++ b/config/sites/default/embed.button.media_entity_embed.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_entity_browser_media_library
+    - entity_browser.browser.media_entity_browser
   module:
     - entity_embed
     - media
@@ -16,7 +16,7 @@ type_settings:
   entity_type: media
   bundles: {  }
   display_plugins: {  }
-  entity_browser: media_entity_browser_media_library
+  entity_browser: media_entity_browser
   entity_browser_settings:
     display_review: false
 icon_uuid: null
