--- a/build.xml
+++ b/build.xml
@@ -92,7 +92,8 @@
             <then>
                 <echo message="${theme.root}/node_modules/.yarn-integrity doesn't exist, so run yarn install." />
                 <chmod file="${drupal.root}/${theme.root}" mode="744" />
-                <exec dir="${drupal.root}/${theme.root}" command="npm install" passthru="true" checkreturn="true"/>
+                <exec dir="${drupal.root}/${theme.root}" command="yarn build" passthru="true" checkreturn="true"/>
+                <exec dir="${drupal.root}/${theme.root}/scripts" command="sh twig_functions.sh" passthru="true" checkreturn="true"/>
             </then>
             <else>
                 <echo message="${drupal.theme}/node_modules/.yarn-integrity exists so tt looks like you've already installed yarn. Cool beans." />
