--- a/build.xml
+++ b/build.xml
@@ -109,7 +109,13 @@
                 <echo message="${styleguide.root}/dist/style.css exists, so you've already built the style guide? Awesome. Be sure to run `yarn build` or `yarn start` in your chosen environment to get the latest and greatest." />
             </else>
         </if>
-        <exec command="yarn build" dir="${styleguide.root}" />
+        <if>
+            <equals arg1="${build.env}" arg2="acquia"/>
+            <then>
+                <exec dir="${styleguide.root}" command="git add dist -f" passthru="true" checkreturn="true"/>
+                <exec dir="${styleguide.root}" command="git commit -m'Deploy styleguide changes'" passthru="true" checkreturn="true"/>
+            </then>
+        </if>
     </target>
 
 
