--- a/.the-build/build.yml
+++ b/.the-build/build.yml
@@ -57,6 +57,7 @@ artifact:
   git:
     remote: "towerhealth@svn-29892.prod.hosting.acquia.com:towerhealth.git"
   gitignore_template: .the-build/artifacts.gitignore
+  root: "artifacts/build"
 
 # Styleguide settings
 styleguide:
