Change theme path.

--- a/.the-build/build.yml
+++ b/.the-build/build.yml
@@ -57,14 +57,13 @@ artifact:
   git:
     remote: "towerhealth@svn-29892.prod.hosting.acquia.com:towerhealth.git"
   gitignore_template: .the-build/artifacts.gitignore
-  root: "artifacts/build"
 
 # Styleguide settings
 styleguide:
   root: "styleguide"
 
 theme:
-  root: "themes/custom/tower_health"
+  root: "${drupal.root}/themes/custom/tower_health"
 
 # Configuration for using PHP Mess Detector to check for general PHP best practices,
 # unused variables, and to agnalyze complexity.
