--- a/build.xml
+++ b/build.xml
@@ -91,8 +91,8 @@
             <not><available file="${theme.root}/node_modules/.yarn-integrity" type="file" /></not>
             <then>
                 <echo message="${theme.root}/node_modules/.yarn-integrity doesn't exist, so run yarn install." />
+                <exec command="composer install --no-interaction --no-scripts --optimize-autoloader --prefer-dist" dir="${theme.root}" />
                 <chmod file="${theme.root}" mode="755" />
-                <exec command="composer install --no-interaction --no-scripts --optimize-autoloader --prefer-dist" dir="${styleguide.root}" />
                 <exec dir="${theme.root}" command="yarn install" passthru="true" checkreturn="true"/>
             </then>
             <else>
