--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal-pattern-lab/attach-library-twig-extension": "^1.1",
         "drupal-pattern-lab/bem-twig-extension": "^1.0",
         "drupal-pattern-lab/unified-twig-extensions": "^0.1.0",
+        "drupal/acquia_connector": "^1.16",
         "drupal/address": "^1.6",
         "drupal/admin_toolbar": "^1.26",
         "drupal/auto_entitylabel": "^3.0@beta",
@@ -64,8 +65,8 @@
         "drupal/rabbit_hole": "^1.0@beta",
         "drupal/readonly_field_widget": "^1.3",
         "drupal/redirect": "^1.4",
-        "drupal/search_api_location": "^1.0",
         "drupal/schema_metatag": "^1.4",
+        "drupal/search_api_location": "^1.0",
         "drupal/search_api_solr": "^1.1",
         "drupal/token": "^1.5",
         "drupal/workbench": "^1.1",
