--- a/config/sites/default/search_api.index.acquia_search_index.yml
+++ b/config/sites/default/search_api.index.acquia_search_index.yml
@@ -7,11 +7,11 @@ dependencies:
     - field.storage.node.field_medical_specialties_ref
     - field.storage.taxonomy_term.field_related_conditions_ref
     - field.storage.taxonomy_term.field_condition_synonym
+    - field.storage.node.field_location_type
     - field.storage.node.field_profile_gender
     - field.storage.node.field_insurance_ref
     - field.storage.taxonomy_term.field_insurance_company
     - field.storage.node.field_location_ref
-    - field.storage.node.field_location_type
     - field.storage.node.field_profile_languages
     - field.storage.node.field_profile_type
     - search_api.server.acquia_search_server
@@ -80,6 +80,17 @@ field_settings:
       module:
         - node
         - node
+  location_type_string:
+    label: 'Location Type » Taxonomy term » Name » String'
+    datasource_id: 'entity:node'
+    property_path: 'field_location_type:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_location_type
+      module:
+        - taxonomy
+        - taxonomy
   name:
     label: Name
     datasource_id: 'entity:taxonomy_term'
@@ -137,17 +148,6 @@ field_settings:
       module:
         - node
         - node
-  provider_location_type_string:
-    label: 'Location Type » Taxonomy term » Name » String'
-    datasource_id: 'entity:node'
-    property_path: 'field_location_type:entity:name'
-    type: string
-    dependencies:
-      config:
-        - field.storage.node.field_location_type
-      module:
-        - taxonomy
-        - taxonomy
   provider_profile_languages_string:
     label: 'Languages » String'
     datasource_id: 'entity:node'
@@ -296,13 +296,13 @@ processor_settings:
       - location_services_specialty_condition_synonym
       - location_services_title
       - location_services_title_string
+      - location_type_string
       - name
       - profile_gender_string
       - provider_insurance_company_string
       - provider_insurance_groups_string
       - provider_insurance_ref
       - provider_location_title_string
-      - provider_location_type_string
       - provider_profile_languages_string
       - provider_profile_type
       - provider_specialties_condition_name
